# makoureactor

./: .clang-format  .gitignore  .travis.yml  AnimEditorDialog.cpp  AnimEditorDialog.h  ApercuBG.cpp  ApercuBG.h  ApercuBGLabel.cpp  ApercuBGLabel.h  Arguments.cpp  Arguments.h  ArgumentsExport.cpp  ArgumentsExport.h  ArgumentsPatch.cpp  ArgumentsPatch.h  BGDialog.cpp  BGDialog.h  BackgroundFilePC.h  BackgroundFilePS.cpp  BackgroundTile.cpp  BackgroundTile.h  CLI.cpp  CLI.h  CMakeLists.txt  CaFile.cpp  CaFile.h  ColorDisplay.cpp  ColorDisplay.h  Commande.cpp  Commande.h  CommandeList.cpp  CommandeList.h  Config.cpp  Config.h  ConfigWindow.cpp  ConfigWindow.h  Data.cpp  Data.h  Delegate.h  EncounterFile.cpp  (+164 more)
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
QGLViewer/: libQGLViewer.so.2.3.17  manipulatedCameraFrame.h  manipulatedFrame.h  qglviewer_fr.qm
ScriptEditorWidgets/: Delegate.cpp  Delegate.h  ScriptEditorGenericList.cpp  ScriptEditorGenericList.h  ScriptEditorMathPage.cpp  ScriptEditorStructPage.cpp  ScriptEditorStructPage.h  ScriptEditorView.cpp  ScriptEditorView.h  ScriptEditorWindowPage.cpp  ScriptEditorWindowPage.h
c# consol calculator/: consol calclator.cs
cmake/: FindZlib.cmake
core/: AkaoDrumInstr.cpp  AkaoDrumInstr.h  AkaoFile.cpp  AkaoFile.h  AkaoIO.cpp  AkaoIO.h  AkaoInstr.cpp  AkaoInstr.h  Archive.cpp  Archive.h  Clipboard.cpp  Config.cpp  Config.h  FF7Font.cpp  FF7Font.h  FF7Text.cpp  FF7Text.h  GZIP.cpp  GZIP.h  GZIPPS.cpp  GZIPPS.h  IO.cpp  IO.h  IsoArchive.cpp  IsoArchive.cpp.bak  IsoArchive.h  IsoArchiveFF7.cpp  IsoArchiveFF7.h  LZS.cpp  LZS.h  Lgp.cpp  Lgp.h  Lgp_p.cpp  Lgp_p.h  LzsIO.cpp  LzsIO.h  LzsSectionFile.cpp  LzsSectionFile.h  PsColor.cpp  PsColor.h  (+16 more)
debian/: changelog  control  copyright  install  makoureactor.links  menu  postinst  preinst  prerm
deploy/: CMakeLists.txt  deploy.cmake  deployqt.cmake
deploy/linux/: Makou_Reactor.desktop  io.github.myst6re.makoureactor.desktop  io.github.myst6re.makoureactor.metainfo.xml
deploy/macosx/: Makou_Reactor.icns
icons/: CMakeLists.txt  icons.qrc
lang/: CMakeLists.txt  Makou_Reactor_fr.ts  Makou_Reactor_ja.ts
misc/: Makou_Reactor_en.ts
src/: Arguments.cpp  Arguments.h  ArgumentsExport.cpp  ArgumentsExport.h  ArgumentsPatch.cpp  ArgumentsPatch.h  ArgumentsTools.cpp  ArgumentsTools.h  CLI.cpp  CLI.h  CMakeLists.txt  Data.cpp  Data.h  FieldModelThread.cpp  FieldModelThread.h  Window.cpp  Window.h  main.cpp  txt.cpp
src/3d/: FieldModel.cpp  FieldModel.h  Renderer.cpp  Renderer.h  WalkmeshWidget.cpp  WalkmeshWidget.h
src/core/: Akao.cpp  Akao.h  AkaoIO.cpp  AkaoIO.h  Archive.cpp  Archive.h  Clipboard.cpp  Clipboard.h  Config.cpp  Config.h  CsvFile.cpp  CsvFile.h  FF7Font.cpp  FF7Font.h  FF7String.cpp  FF7String.h  FF7Text.cpp  FF7Text.h  GZIP.cpp  IO.cpp  IO.h  IsoArchive.cpp  IsoArchive.h  IsoArchiveFF7.cpp  IsoArchiveFF7.h  Lgp.cpp  Lgp.h  Lgp_p.cpp  Lgp_p.h  PsColor.cpp  PsColor.h  PsfFile.cpp  PsfFile.h  QLockedFile.cpp  Renderer.cpp  Renderer.h  SystemColor.cpp  SystemColor.h  SystemColor.mm  TexFile.cpp  (+9 more)
src/core/field/: AFile.cpp  AFile.h  BackgroundFile.cpp  BackgroundFile.h  BackgroundFilePC.cpp  BackgroundFilePC.h  BackgroundFilePS.cpp  BackgroundFilePS.h  BackgroundIO.cpp  BackgroundIO.h  BackgroundTextures.cpp  BackgroundTextures.h  BackgroundTexturesIO.cpp  BackgroundTexturesIO.h  BackgroundTiles.cpp  BackgroundTiles.h  BackgroundTilesFile.cpp  BackgroundTilesFile.h  BackgroundTilesIO.cpp  BackgroundTilesIO.h  BcxFile.cpp  BcxFile.h  BsxFile.cpp  BsxFile.h  CaFile.cpp  CaFile.h  CharArchive.cpp  CharArchive.h  EncounterFile.cpp  EncounterFile.h  Field.cpp  Field.h  FieldArchive.cpp  FieldArchive.h  FieldArchiveIO.cpp  FieldArchiveIO.h  FieldArchiveIOPC.cpp  FieldArchiveIOPC.h  FieldArchiveIOPS.cpp  FieldArchiveIOPS.h  (+72 more)
src/core/world/: TblFile.cpp  TblFile.h
src/include/: shobjidl.h
src/qt/: Makou_Reactor.qrc  Makou_Reactor.rc  compat.h
src/qt/shaders/: main.frag  main.vert
src/qt/translations/: Makou_Reactor_fr.ts  Makou_Reactor_ja.ts
src/widgets/: AboutDialog.cpp  AboutDialog.h  AnimEditorDialog.cpp  AnimEditorDialog.h  ApercuBG.cpp  ApercuBG.h  ApercuBGLabel.cpp  ApercuBGLabel.h  ArchivePreview.cpp  ArchivePreview.h  BGDialog.cpp  BGDialog.h  BackgroundEditor.cpp  BackgroundEditor.h  BackgroundPaletteEditor.cpp  BackgroundPaletteEditor.h  BackgroundTileEditor.cpp  BackgroundTileEditor.h  ColorDisplay.cpp  ColorDisplay.h  ConfigWindow.cpp  ConfigWindow.h  EditBGLabel.cpp  EditBGLabel.h  EmptyFieldWidget.cpp  EmptyFieldWidget.h  EncounterTableWidget.cpp  EncounterTableWidget.h  EncounterWidget.cpp  EncounterWidget.h  ExportChunksDialog.cpp  ExportChunksDialog.h  FieldList.cpp  FieldList.h  FieldModel.cpp  FieldModel.h  FontDisplay.cpp  FontDisplay.h  FontGrid.cpp  FontGrid.h  (+91 more)
src/widgets/ScriptEditorWidgets/: Delegate.cpp  Delegate.h  ScriptEditorGenericList.cpp  ScriptEditorGenericList.h  ScriptEditorMathPage.cpp  ScriptEditorMathPage.h  ScriptEditorModelPage.cpp  ScriptEditorModelPage.h  ScriptEditorMoviePage.cpp  ScriptEditorMoviePage.h  ScriptEditorSpecialPage.cpp  ScriptEditorSpecialPage.h  ScriptEditorStructPage.cpp  ScriptEditorStructPage.h  ScriptEditorView.cpp  ScriptEditorView.h  ScriptEditorWalkmeshPage.cpp  ScriptEditorWalkmeshPage.h  ScriptEditorWindowPage.cpp  ScriptEditorWindowPage.h
translations/: CMakeLists.txt  Makou_Reactor_fr.ts  Makou_Reactor_ja.ts
widgets/: AboutDialog.cpp  AboutDialog.h  AnimEditorDialog.cpp  AnimEditorDialog.h  ApercuBG.cpp  ApercuBG.h  ApercuBGLabel.cpp  ApercuBGLabel.h  ArchivePreview.cpp  ArchivePreview.h  BGDialog.cpp  BGDialog.h  ColorDisplay.cpp  ColorDisplay.h  ConfigWindow.cpp  ConfigWindow.h  DetachableStackedLayout.cpp  DetachableStackedLayout.h  EmptyFieldWidget.cpp  EmptyFieldWidget.h  EncounterTableWidget.cpp  EncounterTableWidget.h  EncounterWidget.cpp  EncounterWidget.h  FieldList.cpp  FieldList.h  FieldModel.cpp  FieldModel.h  FontDisplay.cpp  FontDisplay.h  FontGrid.cpp  FontGrid.h  FontLetter.cpp  FontLetter.h  FontManager.cpp  FontManager.h  FontPalette.cpp  FontPalette.h  FontWidget.cpp  FontWidget.h  (+71 more)
(+158 files in other folders)
